[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ens-pyformal"
authors = [
    {name = "Erwan Nisol", email = "erwan.nisol@free.fr"},
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "numpy == 1.25.2"
]

[tool.ruff]
select = ["D", "E", "F", "I", "N", "W"]
ignore = [
    "N999",  # Invalid module name (caused by cookiecutter syntax)
    "D203",  # Incompatible with D211
    "D213",  # Incompatible with D212
    "D107"  # Docstrings in __init__
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
